ufw (0.32) UNRELEASED; urgency=low

  * Obsolete python2.5 in preparation for python3 support

 -- Jamie Strandboge <jamie@ubuntu.com>  Sat, 19 May 2012 08:48:15 -0500

ufw (0.31.1) RELEASED; urgency=low

  * src/util.py: revert revert r752 which introduced problems with other
    locales (LP: #953372)
  * add tests/check-locales. This is Debian/Ubuntu specific, but will help
    avoid commits like r752.

 -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 12 Mar 2012 20:26:28 -0500

ufw (0.31) RELEASED; urgency=low

  * allow UPnP multicast for service discovery (LP: #764933)
  * conf/ufw.defaults:
    - remove IRC connection tracking, which is only required for DCC
    - allow nf_conntrack_netbios_ns (Samba) (LP: #360975)
  * enable IPv6 by default
  * fix 'allow to any ipv6' when IPv6 is enabled
  * update manpage references to ufw and ufw-framework to include the section
  * update check-requirements to prompt to continue with tests that may
    autoload modules. Add '-f' option to check-requirements and update test
    suite accordingly (LP: #782816)
  * don't fail when running 'show listening' under fakeroot (LP: #812516)
  * add syntax-check to Makefile
  * add man-check to Makefile
  * src/util.py: use codes.open(..., 'UTF-8') to better support non-english
    locales in third-party frontends. Analysis and patch suggestion thanks to
    S. Nizio. (LP: #921758)
  * conf/ufw.defaults and doc/ufw-framework.8: add info on tftp connection
    tracking modules
  * fix traceback when specifying '--dry-run' with no arguments (LP: #946332)
  * tests/testlib.sh: add 'http-or-www' argument to do_cmd() to try to
    account for /etc/services files with http/udp instead of www/udp. Adjust
    bad/apps and root/normalization for this (LP: #947224)
  * conf/before6.rules: use correct ports for DHCPv6 and limit source and
    destination addresses to autoconfiguration addresses (fe80::/10). Thanks
    to Mathieu Trudel-Lapierre (LP: #947416)