@@ -1,6 +1,6 @@
 '''backend.py: interface for ufw backends'''
 #
-# Copyright 2008-2011 Canonical Ltd.
+# Copyright 2008-2012 Canonical Ltd.
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License version 3,
@@ -66,14 +66,14 @@ class UFWBackend:
 
     def is_enabled(self):
         '''Is firewall configured as enabled'''
-        if self.defaults.has_key('enabled') and \
+        if 'enabled' in self.defaults and \
            self.defaults['enabled'] == 'yes':
             return True
         return False
 
     def use_ipv6(self):
         '''Is firewall configured to use IPv6'''
-        if self.defaults.has_key('ipv6') and \
+        if 'ipv6' in self.defaults and \
            self.defaults['ipv6'] == 'yes' and \
            os.path.exists("/proc/sys/net/ipv6"):
             return True
@@ -142,7 +142,7 @@ class UFWBackend:
                 if not pat.search(profile):
                     profiles.append(os.path.join(self.files['apps'], profile))
 
-        for path in self.files.values() + [ os.path.abspath(sys.argv[0]) ] + \
+        for path in list(self.files.values()) + [ os.path.abspath(sys.argv[0]) ] + \
                 profiles:
             while True:
                 debug("Checking " + path)
@@ -159,18 +159,18 @@ class UFWBackend:
                 except Exception:
                     raise
 
-                if statinfo.st_uid != 0 and not warned_owner.has_key(path):
+                if statinfo.st_uid != 0 and path not in warned_owner:
                     warn_msg = _("uid is %(uid)s but '%(path)s' is owned by " \
                                  "%(st_uid)s") % ({'uid': str(uid), \
                                                'path': path, \
                                                'st_uid': str(statinfo.st_uid)})
                     warn(warn_msg)
                     warned_owner[path] = True
-                if mode & stat.S_IWOTH and not warned_world_write.has_key(path):
+                if mode & stat.S_IWOTH and path not in warned_world_write:
                     warn_msg = _("%s is world writable!") % (path)
                     warn(warn_msg)
                     warned_world_write[path] = True
-                if mode & stat.S_IWGRP and not warned_group_write.has_key(path):
+                if mode & stat.S_IWGRP and path not in warned_group_write:
                     warn_msg = _("%s is group writable!") % (path)
                     warn(warn_msg)
                     warned_group_write[path] = True
@@ -208,7 +208,7 @@ class UFWBackend:
         # do some default policy sanity checking
         policies = ['accept', 'accept_no_track', 'drop', 'reject']
         for c in [ 'input', 'output', 'forward' ]:
-            if not self.defaults.has_key('default_%s_policy' % (c)):
+            if 'default_%s_policy' % (c) not in self.defaults:
                 err_msg = _("Missing policy for '%s'" % (c))
                 raise UFWError(err_msg)
             p = self.defaults['default_%s_policy' % (c)]
@@ -299,7 +299,7 @@ class UFWBackend:
     def get_app_rules_from_template(self, template):
         '''Return a list of UFWRules based on the template rule'''
         rules = []
-        profile_names = self.profiles.keys()
+        profile_names = list(self.profiles.keys())
 
         if template.dport in profile_names and template.sport in profile_names:
             dports = ufw.applications.get_ports(self.profiles[template.dport])
@@ -446,12 +446,12 @@ class UFWBackend:
 
     def find_application_name(self, profile_name):
         '''Find the application profile name for profile_name'''
-        if self.profiles.has_key(profile_name):
+        if profile_name in self.profiles:
             return profile_name
 
         match = ""
         matches = 0
-        for n in self.profiles.keys():
+        for n in list(self.profiles.keys()):
             if n.lower() == profile_name.lower():
                 match = n
                 matches += 1
@@ -503,7 +503,7 @@ class UFWBackend:
             if r.dapp != "" or r.sapp != "":
                 tupl = r.get_app_tuple()
 
-                if app_rules.has_key(tupl):
+                if tupl in app_rules:
                     tuple_offset += 1
                 else:
                     app_rules[tupl] = True
@@ -530,8 +530,8 @@ class UFWBackend:
         '''Gets current log level of firewall'''
         level = 0
         rstr = _("Logging: ")
-        if not self.defaults.has_key('loglevel') or \
-           self.defaults['loglevel'] not in self.loglevels.keys():
+        if 'loglevel' not in self.defaults or \
+           self.defaults['loglevel'] not in list(self.loglevels.keys()):
             level = -1
             rstr += _("unknown")
         else:
@@ -544,13 +544,13 @@ class UFWBackend:
 
     def set_loglevel(self, level):
         '''Sets log level of firewall'''
-        if level not in self.loglevels.keys() + ['on']:
+        if level not in list(self.loglevels.keys()) + ['on']:
             err_msg = _("Invalid log level '%s'") % (level)
             raise UFWError(err_msg)
 
         new_level = level
         if level == "on":
-            if not self.defaults.has_key('loglevel') or \
+            if 'loglevel' not in self.defaults or \
                self.defaults['loglevel'] == "off":
                 new_level = "low"
             else:
@@ -586,7 +586,7 @@ class UFWBackend:
             if r.dapp != "" or r.sapp != "":
                 tupl = r.get_app_tuple()
 
-                if app_rules.has_key(tupl):
+                if tupl in app_rules:
                     debug("Skipping found tuple '%s'" % (tupl))
                     continue
                 else:
@@ -606,7 +606,7 @@ class UFWBackend:
             if r.dapp != "" or r.sapp != "":
                 tupl = r.get_app_tuple()
 
-                if app_rules.has_key(tupl):
+                if tupl in app_rules:
                     debug("Skipping found tuple '%s'" % (tupl))
                     continue
                 else:
