@@ -1,6 +1,7 @@
 ufw (0.32) UNRELEASED; urgency=low
 
   * Obsolete python2.5 in preparation for python3 support
+  * Add python3 support
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Sat, 19 May 2012 08:48:15 -0500
 
